fix: window width on mobile

--- a/app/javascript/stylesheets/frontend/base.scss
+++ b/app/javascript/stylesheets/frontend/base.scss
@@ -49,6 +49,7 @@ body {
     flex: 1;
     flex-direction: column;
     justify-content: space-between;
+    max-width: 100%;
     height: 100%;
   }
 
